[package]
name = "github-amanpradhan05/solana-auction-program/"
version = "0.1.0"
description = "Native Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.13"
thiserror = "1.0.48"
spl-token = "4.0.0"
arrayref = "0.3.7"
